# VectorsDataType

./: setup.cfg
src/VectorsDataType/: Data.py  Vectors.py  __init__.py
