[metadata]
name = VectorsDataType
version = 0.0.2
author = Brad
description = A small example DataType package
long_description = file: README.md
long_description_content_type = text/markdown
url = ?
project_urls =
    Bug Tracker = ?/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src